Correzione ai valori ottenuti, i valori adesso sono separati per ogni configurazione

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -34,6 +34,11 @@
     "\n",
     "##########\n",
     "\n",
+    "ts90 = 1.64\n",
+    "ts95 = 1.96\n",
+    "\n",
+    "##########\n",
+    "\n",
     "def orderrunlist(mylist):\n",
     "    orderedlist = [mylist[0]]\n",
     "    for i in range(11, 20):\n",
@@ -42,25 +47,12 @@
     "        orderedlist.append(mylist[i])\n",
     "    return orderedlist;\n",
     "\n",
-    "def printvals(means):\n",
-    "    mean = statistics.mean(means)\n",
-    "    var = (1 / (len(means) - 1)) * sum([(m - mean)**2 for m in means])\n",
+    "def computevals(vallist):\n",
+    "    mean = statistics.mean(vallist)\n",
+    "    var = (1 / (len(vallist) - 1)) * sum([(v - mean)**2 for v in vallist])\n",
     "    stdev = math.sqrt(var)\n",
-    "    confinterval = [[mean - ts90 * (stdev / math.sqrt(len(means))), mean + ts90 * (stdev / math.sqrt(len(means)))], [mean - ts95 * (stdev / math.sqrt(len(means))), mean + ts95 * (stdev / math.sqrt(len(means)))]]\n",
-    "    \n",
-    "    print('=== mean ===')\n",
-    "    print(mean)\n",
-    "    print('\\n=== var ===')\n",
-    "    print(var)\n",
-    "    print('\\n=== stdev ===')\n",
-    "    print(stdev)\n",
-    "    print('\\n=== confinterval ===')\n",
-    "    print(confinterval)\n",
-    "    \n",
-    "##########\n",
-    "\n",
-    "ts90 = 1.64\n",
-    "ts95 = 1.96"
+    "    confinterval = [[mean - ts90 * (stdev / math.sqrt(len(vallist))), mean + ts90 * (stdev / math.sqrt(len(vallist)))], [mean - ts95 * (stdev / math.sqrt(len(vallist))), mean + ts95 * (stdev / math.sqrt(len(vallist)))]]\n",
+    "    return [mean, var, stdev, confinterval]"
    ]
   },
   {
@@ -292,7 +284,7 @@
     "# Massimi di ogni configurazione\n",
     "maximums = list()\n",
     "# Media di ogni configurazione\n",
-    "medias = list()\n",
+    "means = list()\n",
     "\n",
     "for i in range(48):\n",
     "    n = pd.read_csv('csvresults/n{}.csv'.format(i + 1))\n",
@@ -310,7 +302,7 @@
     "    # Massimi dei run\n",
     "    maximum = list()\n",
     "    # Medie dei run\n",
-    "    media = list()\n",
+    "    mean = list()\n",
     "    for v in veclist:\n",
     "        # Esclusione del transiente iniziale\n",
     "        vtrans = [float(f) for f in v.vectime.split(' ') if float(f) >= transiente]\n",
@@ -322,71 +314,80 @@
     "        # Calcolo del massimo\n",
     "        maximum.append(float(sortedv[-1]))\n",
     "        # Calcolo della media\n",
-    "        media.append(statistics.mean([float(f) for f in sortedv]))\n",
+    "        mean.append(statistics.mean([float(f) for f in sortedv]))\n",
     "        \n",
     "    medianas.append(mediana)\n",
     "    minimums.append(minimum)\n",
     "    maximums.append(maximum)\n",
-    "    medias.append(media)\n",
+    "    means.append(mean)\n",
     "\n",
-    "means = list()\n",
+    "# Valori delle mediane\n",
+    "medianaval = list()\n",
+    "# Valori dei minimi\n",
+    "minimumval = list()\n",
+    "# Valori dei massimi\n",
+    "maximumval = list()\n",
+    "# Valori delle medie\n",
+    "meanval = list()\n",
+    "\n",
     "for m in medianas:\n",
-    "    means.append(statistics.mean(m))\n",
+    "    medianaval.append(computevals(m))\n",
     "    \n",
-    "print('=== mediana ===')\n",
-    "printvals(means)\n",
-    "\n",
-    "means = list()\n",
     "for m in minimums:\n",
-    "    means.append(statistics.mean(m))\n",
+    "    minimumval.append(computevals(m))\n",
     "    \n",
-    "print('\\n=== minimum ===')\n",
-    "printvals(means)\n",
-    "\n",
-    "means = list()\n",
     "for m in maximums:\n",
-    "    means.append(statistics.mean(m))\n",
+    "    maximumval.append(computevals(m))\n",
     "    \n",
-    "print('\\n=== maximum ===')\n",
-    "printvals(means)\n",
+    "for m in means:\n",
+    "    meanval.append(computevals(m))\n",
+    "    \n",
+    "print('=== Mediana ===')\n",
+    "print(medianaval)\n",
     "\n",
-    "means = list()\n",
-    "for m in medias:\n",
-    "    means.append(statistics.mean(m))\n",
-    "    \n",
-    "print('\\n=== medie ===')\n",
-    "printvals(means)"
+    "print('\\n=== Minimo ===')\n",
+    "print(minimumval)\n",
+    "\n",
+    "print('\\n=== Massimo ===')\n",
+    "print(maximumval)\n",
+    "\n",
+    "print('\\n=== Media ===')\n",
+    "print(meanval)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Network.server.droppedForDeadline:count\n",
     "\n",
-    "# Droppati per ogni configurazione\n",
+    "# Droppati di ogni configurazione\n",
     "drops = list()\n",
     "\n",
     "for i in range(48):\n",
     "    n = pd.read_csv('csvresults/n{}.csv'.format(i + 1))\n",
     "    # Ricerca degli scalari\n",
-    "    scalarlistraw = list()\n",
-    "    scalars = n[(n['module'] == 'Network.server') & (n['name']== 'droppedForDeadline:count') & (n['type'] == 'scalar')]\n",
+    "    scalistraw = list()\n",
+    "    scalars = n[(n['module'] == 'Network.server') & (n['name'] == 'droppedForDeadline:count') & (n['type'] == 'scalar')]\n",
     "    for s in scalars.itertuples():\n",
-    "        scalarlistraw.append(s)\n",
+    "        scalistraw.append(s.value)\n",
     "    # Ordinamento dei run\n",
-    "    scalarlist = orderrunlist(scalarlistraw)\n",
-    "    # Droppati dei run\n",
-    "    drops.append([float(s.value) for s in scalarlist])\n",
+    "    scalist = orderrunlist(scalistraw)\n",
+    "    # Medie dei run\n",
+    "    drops.append(scalist)\n",
+    "\n",
+    "# Valori delle medie\n",
+    "dropval = list()\n",
     "    \n",
-    "means = list()\n",
-    "for m in drops:\n",
-    "    means.append(statistics.mean(m))\n",
-    "    \n",
-    "print('=== drop ===')\n",
-    "printvals(means)"
+    "for d in drops:\n",
+    "    dropval.append(computevals(d))\n",
+    "\n",
+    "print('\\n=== Droppati ===')\n",
+    "print(dropval)"
    ]
   },
   {
