Nella relazione è presente lo studio dei valori con transiente iniziale escluso considerando [0s, 300s]

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -386,7 +386,7 @@
     "for d in drops:\n",
     "    dropval.append(computevals(d))\n",
     "\n",
-    "print('\\n=== Droppati ===')\n",
+    "print('=== Droppati ===')\n",
     "print(dropval)"
    ]
   },
