Creata la presentazione, correzioni alla relazione, Modificato il notebook per fare il plot delle distribuzioni esponenziali

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -18,10 +18,6 @@
     "\n",
     "##########\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = [20,10]\n",
-    "\n",
-    "##########\n",
-    "\n",
     "def parse_ndarray(s):\n",
     "    return np.fromstring(s, sep=' ') if s else None\n",
     "\n",
@@ -268,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Network.sink.lifeTime:vector [mediana] [min] [max] [mean]\n",
@@ -352,7 +346,44 @@
     "print(maximumval)\n",
     "\n",
     "print('\\n=== Media ===')\n",
-    "print(meanval)"
+    "print(meanval)\n",
+    "\n",
+    "medianavalsrc = [m[0] for m in medianaval]\n",
+    "minimumvalsrc = [m[0] for m in minimumval]\n",
+    "maximumvalsrc = [m[0] for m in maximumval]\n",
+    "meanvalsrc = [m[0] for m in meanval]\n",
+    "medianaso = sorted(medianavalsrc)\n",
+    "minimumso = sorted(minimumvalsrc)\n",
+    "maximumso = sorted(maximumvalsrc)\n",
+    "meanso = sorted(meanvalsrc)\n",
+    "\n",
+    "print(\"\\n=== Mediana ===\")\n",
+    "for m in medianaso[:5]:\n",
+    "    print('{} {:.12f}'.format(medianavalsrc.index(m) + 1, m))\n",
+    "print()\n",
+    "for m in medianaso[-5:]:\n",
+    "    print('{} {:.12f}'.format(medianavalsrc.index(m) + 1, m))\n",
+    "\n",
+    "print(\"\\n=== Minimo ===\")\n",
+    "for m in minimumso[:5]:\n",
+    "    print('{} {:.12f}'.format(minimumvalsrc.index(m) + 1, m))\n",
+    "print()\n",
+    "for m in minimumso[-5:]:\n",
+    "    print('{} {:.12f}'.format(minimumvalsrc.index(m) + 1, m))\n",
+    "    \n",
+    "print(\"\\n=== Massimo ===\")\n",
+    "for m in maximumso[:5]:\n",
+    "    print('{} {:.12f}'.format(maximumvalsrc.index(m) + 1, m))\n",
+    "print()\n",
+    "for m in maximumso[-5:]:\n",
+    "    print('{} {:.12f}'.format(maximumvalsrc.index(m) + 1, m))\n",
+    "    \n",
+    "print(\"\\n=== Media ===\")\n",
+    "for m in meanso[:5]:\n",
+    "    print('{} {:.12f}'.format(meanvalsrc.index(m) + 1, m))\n",
+    "print()\n",
+    "for m in meanso[-5:]:\n",
+    "    print('{} {:.12f}'.format(meanvalsrc.index(m) + 1, m))"
    ]
   },
   {
@@ -400,6 +431,8 @@
    "source": [
     "# Grafici per Network.sink.lifeTime:vector [medie]\n",
     "\n",
+    "plt.rcParams['figure.figsize'] = [20,10]\n",
+    "\n",
     "for i in range(48):\n",
     "    n = pd.read_csv('csvresults/n{}.csv'.format(i + 1), converters = {'vectime': parse_ndarray, 'vecvalue': parse_ndarray})\n",
     "\n",
@@ -421,6 +454,8 @@
    "source": [
     "# Grafici per Network.passiveQueue*.queueLength:vector [medie]\n",
     "\n",
+    "plt.rcParams['figure.figsize'] = [20,10]\n",
+    "\n",
     "for i in range(48):\n",
     "    n = pd.read_csv('csvresults/n{}.csv'.format(i + 1), converters = {'vectime': parse_ndarray, 'vecvalue': parse_ndarray})\n",
     "    \n",
@@ -439,6 +474,38 @@
     "        plt.plot(v.vectime, running_avg(v.vecvalue))\n",
     "    plt.title('Configurazione {}, Network.passiveQueue*.queueLength:vector [medie]'.format(i + 1))\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Plot delle distribuzioni di probabilità dei tempi di di interarrivo e di servizio\n",
+    "\n",
+    "plt.rcParams['figure.figsize'] = [10,5]\n",
+    "\n",
+    "x = np.arange(0.0, 4.0, 0.01)\n",
+    "y20 = 2.0 * np.e ** (-2.0 * x)\n",
+    "y14 = 1.4 * np.e ** (-1.4 * x)\n",
+    "y12 = 1.2 * np.e ** (-1.2 * x)\n",
+    "y10 = 1.0 * np.e ** (-1.0 * x)\n",
+    "plt.plot(x, y20)\n",
+    "plt.plot(x, y14)\n",
+    "plt.plot(x, y12)\n",
+    "plt.plot(x, y10)\n",
+    "plt.legend(('lambda = 2.0', 'lambda = 1.4', 'lambda = 1.2', 'lambda = 1.0'))\n",
+    "plt.show()\n",
+    "\n",
+    "y30 = 3.0 * np.e ** (-3.0 * x)\n",
+    "y40 = 4.0 * np.e ** (-4.0 * x)\n",
+    "plt.plot(x, y30)\n",
+    "plt.plot(x, y40)\n",
+    "plt.legend(('lambda = 3.0', 'lambda = 4.0'))\n",
+    "plt.show()"
    ]
   }
  ],
