Correzioni e modifiche alle relazione

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -497,6 +497,7 @@
     "plt.plot(x, y14)\n",
     "plt.plot(x, y12)\n",
     "plt.plot(x, y10)\n",
+    "plt.title('Distribuzione di probabilità esponenziale di media 1/lambda')\n",
     "plt.legend(('lambda = 2.0', 'lambda = 1.4', 'lambda = 1.2', 'lambda = 1.0'))\n",
     "plt.show()\n",
     "\n",
@@ -504,7 +505,8 @@
     "y40 = 4.0 * np.e ** (-4.0 * x)\n",
     "plt.plot(x, y30)\n",
     "plt.plot(x, y40)\n",
-    "plt.legend(('lambda = 3.0', 'lambda = 4.0'))\n",
+    "plt.title('Distribuzione di probabilità esponenziale di media 1/mu')\n",
+    "plt.legend(('mu = 3.0', 'mu = 4.0'))\n",
     "plt.show()"
    ]
   }
